# pogodoro

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230203114001_pogodoro.sql
src/: app.rs  args.rs  config.rs  db.rs  event.rs  lib.rs  main.rs  pomodoro.rs  states.rs  tasks.rs  tui.rs
